--- a/Breakout_Game/index.html
+++ b/Breakout_Game/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Breakout Game</title>
   </head>
+
   <body>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+
     <script src="script.js"></script>
   </body>
 </html>
