--- a/Driving_Game/index.html
+++ b/Driving_Game/index.html
@@ -10,6 +10,9 @@
     <canvas id="gameCanvas" width="800" height="600"></canvas>
 
     <script src="graphicsCommon.js"></script>
-    <script src="script.js"></script>
+    <script src="car.js"></script>
+    <script src="track.js"></script>
+    <script src="input.js"></script>
+    <script src="Main.js"></script>
   </body>
 </html>
