--- a/Driving_Game/index.html
+++ b/Driving_Game/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Breakout Game</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
 
-    <script src="graphicsCommon.js"></script>
-    <script src="imageLoading.js"></script>
-    <script src="car.js"></script>
-    <script src="track.js"></script>
-    <script src="input.js"></script>
-    <script src="Main.js"></script>
+    <script src="js/graphicsCommon.js"></script>
+    <script src="js/imageLoading.js"></script>
+    <script src="js/car.js"></script>
+    <script src="js/track.js"></script>
+    <script src="js/input.js"></script>
+    <script src="js/Main.js"></script>
   </body>
 </html>
